src/objects/CRM_Address_Event_Out__e.object
<CustomObject>
    <description>Platform event published from Salesforce for Address insert and updates, which will be consumed by Kafka</description>
    <fields>
        <fullName>accountID__c</fullName>
        <label>accountID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>address1__c</fullName>
        <label>address1</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>address2__c</fullName>
        <label>address2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>address3__c</fullName>
        <label>address3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>addressID__c</fullName>
        <label>addressID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>addressType__c</fullName>
        <label>addressType</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>author__c</fullName>
        <label>author</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>businessName__c</fullName>
        <label>businessName</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>city__c</fullName>
        <label>city</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>countryCode__c</fullName>
        <label>countryCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>country__c</fullName>
        <label>country</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>entityType__c</fullName>
        <label>entityType</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eventDate__c</fullName>
        <label>eventDate</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eventSourceID__c</fullName>
        <label>eventSourceID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eventSource__c</fullName>
        <defaultValue>&apos;SFDC&apos;</defaultValue>
        <label>eventSource</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>firstName__c</fullName>
        <label>firstName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isLocked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isLocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isPrimary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isPrimary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>lastName__c</fullName>
        <label>lastName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>operation__c</fullName>
        <label>operation</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>parentSystemOfOriginID__c</fullName>
        <label>parentSystemOfOriginID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>postalCode__c</fullName>
        <label>postalCode</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>primaryPhone__c</fullName>
        <label>primaryPhone</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>stage__c</fullName>
        <label>stage</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>stateProvince__c</fullName>
        <label>stateProvince</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>systemOfOriginID__c</fullName>
        <label>systemOfOriginID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>systemOfOrigin__c</fullName>
        <label>systemOfOrigin</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>version__c</fullName>
        <label>version</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>CRM Address Event - Out</label>
    <pluralLabel>CRM Address Events - Out</pluralLabel>
</CustomObject>